// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldGranularity Component should export select options: toolbarFieldOptions 1`] = `
Array [
  Object {
    "_title": "current",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"current\\"})",
    "value": Object {
      "endDate": 2019-07-31T23:59:59.999Z,
      "startDate": 2019-07-01T00:00:00.000Z,
    },
  },
  Object {
    "_title": "june",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"June\\"})",
    "value": Object {
      "endDate": 2019-06-30T23:59:59.999Z,
      "startDate": 2019-06-01T00:00:00.000Z,
    },
  },
  Object {
    "_title": "may",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"May\\"})",
    "value": Object {
      "endDate": 2019-05-31T23:59:59.999Z,
      "startDate": 2019-05-01T00:00:00.000Z,
    },
  },
  Object {
    "_title": "april",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"April\\"})",
    "value": Object {
      "endDate": 2019-04-30T23:59:59.999Z,
      "startDate": 2019-04-01T00:00:00.000Z,
    },
  },
  Object {
    "_title": "march",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"March\\"})",
    "value": Object {
      "endDate": 2019-03-31T23:59:59.999Z,
      "startDate": 2019-03-01T00:00:00.000Z,
    },
  },
  Object {
    "_title": "february",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"February\\"})",
    "value": Object {
      "endDate": 2019-02-28T23:59:59.999Z,
      "startDate": 2019-02-01T00:00:00.000Z,
    },
  },
  Object {
    "_title": "january",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"January\\"})",
    "value": Object {
      "endDate": 2019-01-31T23:59:59.999Z,
      "startDate": 2019-01-01T00:00:00.000Z,
    },
  },
  Object {
    "_title": "december",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"December 2018\\"})",
    "value": Object {
      "endDate": 2018-12-31T23:59:59.999Z,
      "startDate": 2018-12-01T00:00:00.000Z,
    },
  },
  Object {
    "_title": "november",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"November 2018\\"})",
    "value": Object {
      "endDate": 2018-11-30T23:59:59.999Z,
      "startDate": 2018-11-01T00:00:00.000Z,
    },
  },
  Object {
    "_title": "october",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"October 2018\\"})",
    "value": Object {
      "endDate": 2018-10-31T23:59:59.999Z,
      "startDate": 2018-10-01T00:00:00.000Z,
    },
  },
  Object {
    "_title": "september",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"September 2018\\"})",
    "value": Object {
      "endDate": 2018-09-30T23:59:59.999Z,
      "startDate": 2018-09-01T00:00:00.000Z,
    },
  },
  Object {
    "_title": "august",
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"August 2018\\"})",
    "value": Object {
      "endDate": 2018-08-31T23:59:59.999Z,
      "startDate": 2018-08-01T00:00:00.000Z,
    },
  },
]
`;

exports[`ToolbarFieldGranularity Component should handle selecting an option directly: selected option 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {\\"context\\":\\"granularity\\"})"
  ariaLabel="Select option"
  className=""
  id="generatedid-"
  isDisabled={false}
  isToggleText={true}
  maxHeight={250}
  name={null}
  onSelect={[Function]}
  options={
    Array [
      Object {
        "_title": "current",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"current\\"})",
        "value": Object {
          "endDate": 2019-07-31T23:59:59.999Z,
          "startDate": 2019-07-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "june",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"June\\"})",
        "value": Object {
          "endDate": 2019-06-30T23:59:59.999Z,
          "startDate": 2019-06-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "may",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"May\\"})",
        "value": Object {
          "endDate": 2019-05-31T23:59:59.999Z,
          "startDate": 2019-05-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "april",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"April\\"})",
        "value": Object {
          "endDate": 2019-04-30T23:59:59.999Z,
          "startDate": 2019-04-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "march",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"March\\"})",
        "value": Object {
          "endDate": 2019-03-31T23:59:59.999Z,
          "startDate": 2019-03-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "february",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"February\\"})",
        "value": Object {
          "endDate": 2019-02-28T23:59:59.999Z,
          "startDate": 2019-02-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "january",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"January\\"})",
        "value": Object {
          "endDate": 2019-01-31T23:59:59.999Z,
          "startDate": 2019-01-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "december",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"December 2018\\"})",
        "value": Object {
          "endDate": 2018-12-31T23:59:59.999Z,
          "startDate": 2018-12-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "november",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"November 2018\\"})",
        "value": Object {
          "endDate": 2018-11-30T23:59:59.999Z,
          "startDate": 2018-11-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "october",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"October 2018\\"})",
        "value": Object {
          "endDate": 2018-10-31T23:59:59.999Z,
          "startDate": 2018-10-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "september",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"September 2018\\"})",
        "value": Object {
          "endDate": 2018-09-30T23:59:59.999Z,
          "startDate": 2018-09-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "august",
        "selected": true,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"August 2018\\"})",
        "value": Object {
          "endDate": 2018-08-31T23:59:59.999Z,
          "startDate": 2018-08-01T00:00:00.000Z,
        },
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {\\"context\\":\\"granularity\\"})"
  selectedOptions="2018-08-01T00:00:00.000Z"
  toggleIcon={null}
  variant="single"
/>
`;

exports[`ToolbarFieldGranularity Component should handle updating granularity through redux state: dispatch date range 1`] = `
Array [
  Array [
    Array [
      Object {
        "granularity": "daily",
        "type": "SET_QUERY_RHSM_granularity",
        "viewId": "toolbarFieldRangeGranularity",
      },
      Object {
        "beginning": "2019-07-01T00:00:00.000Z",
        "type": "SET_QUERY_RHSM_beginning",
        "viewId": "toolbarFieldRangeGranularity",
      },
      Object {
        "ending": "2019-07-31T23:59:59.999Z",
        "type": "SET_QUERY_RHSM_ending",
        "viewId": "toolbarFieldRangeGranularity",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldGranularity Component should render a non-connected component: non-connected 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {\\"context\\":\\"granularity\\"})"
  ariaLabel="Select option"
  className=""
  id="generatedid-"
  isDisabled={false}
  isToggleText={true}
  maxHeight={250}
  name={null}
  onSelect={[Function]}
  options={
    Array [
      Object {
        "_title": "current",
        "selected": true,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"current\\"})",
        "value": Object {
          "endDate": 2019-07-31T23:59:59.999Z,
          "startDate": 2019-07-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "june",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"June\\"})",
        "value": Object {
          "endDate": 2019-06-30T23:59:59.999Z,
          "startDate": 2019-06-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "may",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"May\\"})",
        "value": Object {
          "endDate": 2019-05-31T23:59:59.999Z,
          "startDate": 2019-05-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "april",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"April\\"})",
        "value": Object {
          "endDate": 2019-04-30T23:59:59.999Z,
          "startDate": 2019-04-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "march",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"March\\"})",
        "value": Object {
          "endDate": 2019-03-31T23:59:59.999Z,
          "startDate": 2019-03-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "february",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"February\\"})",
        "value": Object {
          "endDate": 2019-02-28T23:59:59.999Z,
          "startDate": 2019-02-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "january",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"January\\"})",
        "value": Object {
          "endDate": 2019-01-31T23:59:59.999Z,
          "startDate": 2019-01-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "december",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"December 2018\\"})",
        "value": Object {
          "endDate": 2018-12-31T23:59:59.999Z,
          "startDate": 2018-12-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "november",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"November 2018\\"})",
        "value": Object {
          "endDate": 2018-11-30T23:59:59.999Z,
          "startDate": 2018-11-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "october",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"October 2018\\"})",
        "value": Object {
          "endDate": 2018-10-31T23:59:59.999Z,
          "startDate": 2018-10-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "september",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"September 2018\\"})",
        "value": Object {
          "endDate": 2018-09-30T23:59:59.999Z,
          "startDate": 2018-09-01T00:00:00.000Z,
        },
      },
      Object {
        "_title": "august",
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"August 2018\\"})",
        "value": Object {
          "endDate": 2018-08-31T23:59:59.999Z,
          "startDate": 2018-08-01T00:00:00.000Z,
        },
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {\\"context\\":\\"granularity\\"})"
  selectedOptions="t(curiosity-toolbar.granularityRange, {\\"context\\":\\"current\\"})"
  toggleIcon={null}
  variant="single"
/>
`;
